crates/plotnik-lib/tests/02-parser/recovery_validation/category_subtype_rejects_predicate_suffix.txt
Q = (expression#binary_expression?)
==== diagnostics ====
error: unexpected token
 --> query.ptk:1:34
  |
1 | Q = (expression#binary_expression?)
  |                                  ^
  |
help: expected a child node, or `)` to close
